# ARTCOL

./: .env.example  .gitignore  CLAUDE.md  DOSE_experience.html  DOSEpresentation.html  OVH-A-FAIRE.md  RAPPORT-3D.md  README.md  TOOLS.md  artcol-3d-intro.html  artcol-landing-demo.html  index.html  maison-foret-3d.html  maison-refuge.html  maison-visite-3d.html  package-lock.json  package.json  script.js  style.css  vercel.json
amavya/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
artcol-3d/: .gitignore  CLAUDE.md  nav-fix-test.mjs  nav-guided-test.mjs  nav-test-core.mjs  next.config.ts  package-lock.json  package.json
artcol-app/: .env.example  .gitignore  App.tsx  README.md  app.json  package.json
demo-techniques/: Atelier_Techniques_Immersive.html  Presentation_Profondeur_Hermes.html  Tunnel_Profondeur_Hermes.html  build.py  template.html
docs/: AMAVYA_DECISIONS.md  AMAVYA_ROADMAP.md  AMAVYA_TODO.md  CLAUDE-CODE-PROMPT.md  HANDOFF-XIAOMI-SHRINE.md  (+1 more)
reflexe/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
reflexe/missions/: exemple_mission.yaml
reflexe/reflexe/: __init__.py  cli.py  config.py  db.py  llm.py  models.py  orchestrator.py  ratelimit.py
reflexe/reflexe/outputs/: __init__.py  brevo.py  export.py
reflexe/reflexe/pipeline/: __init__.py  clean.py  dedupe.py  enrich.py  personalize.py  score.py
reflexe/reflexe/sources/: __init__.py  base.py  pappers.py  recherche_entreprises.py  website.py
reflexe/tests/: test_clean.py  test_dedupe.py  test_models.py  test_sources.py
sensor/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
sensor/clients/: exemple_client.yaml
sensor/sensor/: __init__.py  cli.py  config.py  models.py
sensor/sensor/analytics/: __init__.py  logger.py
sensor/sensor/api/: __init__.py  deps.py  main.py  routes_admin.py  routes_chat.py
sensor/sensor/embedders/: __init__.py  api.py  base.py  local.py
sensor/sensor/generation/: __init__.py  answerer.py  prompts.py
sensor/sensor/ingestion/: __init__.py  chunker.py  crawler.py  loaders.py  pipeline.py
sensor/sensor/retrieval/: __init__.py  retriever.py
sensor/sensor/storage/: __init__.py  conversations.py
sensor/sensor/vectorstore/: __init__.py  base.py  sqlite_store.py  supabase_store.py
sensor/tests/: conftest.py  test_answerer.py  test_api.py  test_chunker.py  test_retriever.py
sensor/widget/: demo.html  sensor-widget.js
(+594 files in other folders)
