[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflexe"
version = "0.1.0"
description = "REFLEXE — Agent de prospection B2B automatisé (collecte légale, enrichissement, scoring IA, messages, export Brevo)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AMAVYA" }]

dependencies = [
    "httpx>=0.27,<1.0",
    "anthropic>=0.40,<1.0",
    "pydantic>=2.7,<3.0",
    "PyYAML>=6.0,<7.0",
    "tenacity>=8.4,<10.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<15.0",
    "loguru>=0.7,<1.0",
    "python-dotenv>=1.0,<2.0",
    "email-validator>=2.1,<3.0",
    "dnspython>=2.6,<3.0",
    "selectolax>=0.3,<1.0",
    "beautifulsoup4>=4.12,<5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9.0", "pytest-asyncio>=0.23,<1.0"]

[project.scripts]
reflexe = "reflexe.cli:app"

[tool.setuptools.packages.find]
include = ["reflexe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
