[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor"
version = "0.1.0"
description = "SENSOR — Assistant client conversationnel RAG zéro-hallucination, multi-tenant et embarquable."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AMAVYA" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "PyYAML>=6.0,<7.0",
    "anthropic>=0.40,<1.0",
    "sentence-transformers>=3.0,<4.0",
    "sqlite-vec>=0.1.3",
    "numpy>=1.26,<3.0",
    "httpx>=0.27,<1.0",
    "pypdf>=4.2,<6.0",
    "python-docx>=1.1,<2.0",
    "markdown>=3.6,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "selectolax>=0.3,<1.0",
    "tenacity>=8.4,<10.0",
    "slowapi>=0.1.9,<1.0",
    "loguru>=0.7,<1.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9.0", "pytest-asyncio>=0.23,<1.0"]

[project.scripts]
sensor = "sensor.cli:app"

[tool.setuptools.packages.find]
include = ["sensor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
